Fix collapse problem

--- a/src/views/Layout/Layout.scss
+++ b/src/views/Layout/Layout.scss
@@ -42,7 +42,7 @@
   z-index: 800;
   height: 90%!important;
   position: relative !important;
-  padding: 10px 20px 0 20px;
+  padding: 10px 10px 0 0;
   display:grid;
 
   .card{
